--- a/style.css
+++ b/style.css
@@ -13,8 +13,15 @@
 @media (min-width: 600px) {
     .container {
       flex-direction: row;
+      flex-wrap: wrap;
     }
-  }                  
+    main {
+      max-width: 60%;
+    }
+    header, footer {
+      width: 100%;
+    }
+  }
 
 body {
     margin: 0;
