added dif nav bar layouts and properties

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --pale-sage: #BFF4CB;
     --sage: #84A98C;
     --dusty-emerald: #52796f;
-    --deep-emerald: #354F52;
+    --deep-emerald: #14545c;
     --night-forest: #2F3E46;
 }
 
